--- a/trip.html
+++ b/trip.html
@@ -3,12 +3,134 @@
 <head>
   <meta charset="UTF-8">
   <title>Reisebuchungs-Formular</title>
-
+  <style>
+    fieldset {
+      margin-bottom: 20px;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
 
 <h1>Reisebuchungs-Formular</h1>
 
+<form action="https://it.bzz.ch/demo/formdata/index.php" method="post">
+
+  <fieldset>
+    <legend>Abflughafen wählen</legend>
+    <label for="abflughafen">Abflughafen:</label>
+    <select id="abflughafen" name="abflughafen" required>
+      <optgroup label="Deutschland">
+        <option value="frankfurt">Frankfurt</option>
+        <option value="muenchen">München</option>
+        <option value="berlin">Berlin</option>
+      </optgroup>
+      <optgroup label="Österreich">
+        <option value="wien">Wien</option>
+        <option value="salzburg">Salzburg</option>
+      </optgroup>
+      <optgroup label="Italien">
+        <option value="mailand">Mailand</option>
+        <option value="rom">Rom</option>
+      </optgroup>
+      <optgroup label="Frankreich">
+        <option value="paris">Paris</option>
+        <option value="lyon">Lyon</option>
+      </optgroup>
+    </select>
+  </fieldset>
+
+  <fieldset>
+    <legend>Unterkunft wählen</legend>
+    <label>
+      <input type="radio" name="unterkunft" value="hotel" required> Hotel
+    </label>
+    <label>
+      <input type="radio" name="unterkunft" value="ferienwohnung"> Ferienwohnung
+    </label>
+    <label>
+      <input type="radio" name="unterkunft" value="hostel"> Hostel
+    </label>
+  </fieldset>
+
+  <fieldset>
+    <legend>Zusätzliche Dienstleistungen</legend>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="reiseversicherung"> Reiseversicherung
+    </label>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="flughafentransfer"> Flughafentransfer
+    </label>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="zusaetzliches_gepaeck"> Zusätzliches Gepäck
+    </label>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="priority_check_in"> Priority-Check-In
+    </label>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="zusaetzliches_handgepaeck"> Zusätzliches Handgepäck
+    </label>
+    <label>
+      <input type="checkbox" name="dienstleistungen" value="mietwagen"> Mietwagen
+    </label>
+  </fieldset>
+
+  <fieldset>
+    <legend>Reisezeitraum und Dauer</legend>
+    <label for="startdatum">Startdatum:</label>
+    <input type="date" id="startdatum" name="startdatum" required>
+    <br>
+    <label for="enddatum">Enddatum:</label>
+    <input type="date" id="enddatum" name="enddatum" required>
+    <br>
+    <label for="reisedauer">Reisedauer (Tage):</label>
+    <input type="number" id="reisedauer" name="reisedauer" min="1" max="21" required>
+  </fieldset>
+
+  <fieldset>
+    <legend>Reisende</legend>
+    <label for="personen">Anzahl der Personen:</label>
+    <input type="number" id="personen" name="personen" min="1" required>
+  </fieldset>
+
+  <fieldset>
+    <legend>Fluggesellschaft</legend>
+    <label for="fluggesellschaft">Bevorzugte Fluggesellschaft:</label>
+    <select id="fluggesellschaft" name="fluggesellschaft" required>
+      <option value="lufthansa">Lufthansa</option>
+      <option value="swiss">Swiss</option>
+      <option value="austrian">Austrian Airlines</option>
+      <option value="airfrance">Air France</option>
+      <option value="alitalia">Alitalia</option>
+    </select>
+  </fieldset>
+
+  <fieldset>
+    <legend>Reiseziel</legend>
+    <label for="reiseziel">Reiseziel:</label>
+    <input list="reiseziele" id="reiseziel" name="reiseziel">
+    <datalist id="reiseziele">
+      <option value="Paris">
+      <option value="New York">
+      <option value="Tokyo">
+      <option value="Sydney">
+      <option value="London">
+    </datalist>
+  </fieldset>
+
+  <fieldset>
+    <legend>Kontakt</legend>
+    <label for="email">E-Mail-Adresse:</label>
+    <input type="email" id="email" name="email" required>
+  </fieldset>
+
+  <fieldset>
+    <legend>Formular abschließen</legend>
+    <button type="reset">Formular zurücksetzen</button>
+    <button type="submit">Formular absenden</button>
+  </fieldset>
+
+</form>
 
 </body>
 </html>
